@@ -3,7 +3,8 @@ Version 0.12.1
 
 Released ?????? ??, ????
 
-- Sphinx documentation (mborsetti)
+- Sphinx documentation #600, #601, #602 (mborsetti)
+- Support for Uzbekistan #593 (slako, dr-p)
 - Refactoring / cleanups / code and naming reviews (mborsetti)
 - Spain improvements #580 (gtrabanco)
 - US fixes #594, #595 (apicht)
